kubernetes/main/apps/matrix/mautrix-discord/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-mautrix-discord
  namespace: matrix
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mautrix-discord
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: matrix-synapse
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
        - ports:
            - port: "8008"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    # why only you?
    # matrix/mautrix-discord:53322  <> networking/traefik:8443  Policy denied DROPPED (TCP Flags: SYN)
    # matrix/mautrix-discord:53328  <> networking/traefik:8443  policy-verdict:none EGRESS DENIED (TCP Flags: SYN)
    #- toEndpoints:
    #    - matchLabels:
    #        app.kubernetes.io/name: traefik
    #        app.kubernetes.io/instance: traefik-networking
    #  toPorts:
    #    - ports:
    #        - port: "8443"
    #          protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres-1
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: matrix-synapse
      toPorts:
        - ports:
            - port: "8008"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # TODO: Fix this urgently
    #- toFQDNs:
    #    - matchPattern: "*.discord.com"
    #    - matchPattern: "*.discord.gg"
    #    - matchPattern: "gateway.discord.gg"
    #    - matchPattern: "*.discordapp.com"
    #    - matchPattern: "*.discordapp.net"
    #  toPorts:
    #    - ports:
    #        - port: "443"
    #          protocol: TCP
